# ray-tracing

./: CMakeLists.txt  Lights.cpp  Lights.hpp  Material.cpp  Material.hpp  Objects.cpp  Objects.hpp  README.md  Time.cpp  Time.hpp  ray_tracing.cpp
